# yace

./: .gitignore  CMakeLists.txt  Makefile  README.md  ]  compile_commands.json  dev
.cache/clangd/index/: ai.cc.48FA1F97571C3221.idx  ai.h.406F1AEA0BDE6C07.idx  board.cc.E52687402B47CF16.idx  board.h.270D5C10837D2933.idx  board_display.cc.5E0950BD11E74C06.idx  board_display.h.31045CBF27444892.idx  input_handler.cc.E0C778F1F1596277.idx  input_handler.h.3BE10982CF494D2C.idx  main.cc.9A686F08B0CB39E2.idx  piece.cc.ADBF436F4E4DE824.idx  piece.h.27E0B073CEE71ADC.idx  piece_display.cc.AC03DB55535C044F.idx  piece_display.h.05F12A5F592AE645.idx
header/: ai.h  board.h  board_display.h  input_handler.h  piece.h  piece_display.h  piece_display_manager.h
src/: ai.cc  board.cc  board_display.cc  input_handler.cc  main.cc  piece.cc  piece_display.cc
